--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -16,7 +16,7 @@
 # 定义路径
 <define name="ConfPath" value="conf">
 <define name="TxtPath" value="txt">
-# 定义域名[此项的value需要修改为您的irc域名]
+# 定义域名[此项的value需要修改为您的irc域名(主机名)]
 <define name="HostName" value="irc.arkfuture.test">
 
 
@@ -40,12 +40,18 @@
 <bind port="6667,6668,6669"
       type="clients">
 
-<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/bind.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="bind"
-         missingokay="no">
+<bind port="6697"
+      sslprofile="Clients"
+      type="clients">
+
+<bind port="6666"
+      type="clients"
+      hook="websocket"
+      sslprofile="Websocket">
+
+<bind port="7000"
+      type="servers"
+      sslprofile="Servers">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -79,48 +85,11 @@
          usests="no"
          port="6667,6668,6669">
 
-<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/connect.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="connect"
-         missingokay="no">
-
-
-#-#-#-#-#-#-#-#-#-#-#-#-#操作员设置#-#-#-#-#-#-#-#-#-#-#-#-#
-# <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
-<class name="Shutdown"
-       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
-<class name="SACommands" 
-       commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
-<class name="ServerLink"
-       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS">
-<class name="BanControl"
-       commands="KILL GLINE KLINE ZLINE QLINE ELINE TLINE RLINE CHECK NICKLOCK NICKUNLOCK SHUN CBAN">
-<class name="OperChat"
-       commands="WALLOPS GLOBOPS">
-<class name="HostCloak"
-       commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
-
-# <type>标签定义了服务器操作员的类型.此标签可以根据需要定义多次.
-<type name="NetAdmin"
-       classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
-       host=""
-       autologin="strict"
-       vhost=""
-       level="90">
-<type name="GlobalOp"
-       classes="OperChat BanControl HostCloak ServerLink"
-       host=""
-       autologin="strict"
-       vhost=""
-       level="70">
-<type name="Helper"
-       classes="HostCloak"
-       host=""
-       autologin="strict"
-       vhost=""
-       level="50">
+<connect name="Secure"
+         parent="Main"
+         allow="*"
+         port="6697"
+         requiressl="yes">
 
 
 #-#-#-#-#-#-#-#-#-#-杂项设置-#-#-#-#-#-#-#-#-#-#
@@ -132,7 +101,7 @@
            rules="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 # <dns>标签定义了在查找主机名时要使用的DNS服务器.此标签只能定义一次.
 <dns enabled="yes"
-     timeout="5s">
+     timeout="3s">
 
 # <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
@@ -144,12 +113,26 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#-#
 # <options>标签定义了常规设置选项.此标签只能定义一次.
-<include executable="curl -L --anyauth https://ARKFUTURE.github.io/ARKFUTURE/CONFIG/inspircd/afeconf/options.conf"
-         noenv="yes"
-         noexec="yes"
-         noinclude="no"
-         mandatorytag="options"
-         missingokay="no">
+<options cyclehostsfromuser="no"
+         defaultbind="auto"
+         defaultmodes="nost"
+         exemptchanops=""
+         extbanformat="name"
+         fixedpart=""
+         fixedquit=""
+         invitebypassmodes="yes"
+         nosnoticestack="no"
+         maskinlist="yes"
+         maskintopic="yes"
+         modesinlist="yes"
+         prefixpart="&quot;"
+         prefixquit="Quit: "
+         splitwhois="no"
+         suffixpart="&quot;"
+         suffixquit=""
+         syntaxhints="yes"
+         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
+         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息.">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全设置#-#-#-#-#-#-#-#-#-#-#-#
