--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -1,4 +1,189 @@
-#modulesconf -- UTF-8 
+#-#-#-#-#-#-#-#-#-#模块列表-#-#-#-#-#-#-#-#
+######Default Modules List
+<module name="abbreviation">
+<module name="account">
+<module name="alias">
+<module name="allowinvite">
+<module name="alltime">
+<module name="anticaps">
+<module name="auditorium">
+<module name="autoop">
+<module name="banexception">
+<module name="banredirect">
+<module name="bcrypt">
+<module name="blockamsg">
+<module name="blockcolor">
+<module name="botmode">
+<module name="callerid">
+<module name="cap">
+<module name="cban">
+<module name="chancreate">
+<module name="chanfilter">
+<module name="chanhistory">
+<module name="chanlog">
+<module name="channames">
+<module name="channelban">
+<module name="check">
+<module name="chghost">
+<module name="chgident">
+<module name="chgname">
+<module name="classban">
+<module name="clearchan">
+<module name="cloak">
+#<module name="cloak_md5"> 此模块将被弃用
+<module name="cloak_sha256">
+<module name="cloak_static">
+<module name="cloak_user">
+<module name="codepage">
+<module name="commonchans">
+<module name="conn_join">
+<module name="conn_umodes">
+<module name="conn_waitpong">
+<module name="connectban">
+<module name="connflood">
+<module name="customprefix">
+<module name="customtitle">
+<module name="cycle">
+<module name="dccallow">
+<module name="deaf">
+<module name="delayjoin">
+<module name="delaymsg">
+<module name="denychans">
+<module name="disable">
+<module name="dnsbl">
+<module name="exemptchanops">
+<module name="filter">
+<module name="gateway">
+<module name="geoban">
+<module name="geoclass">
+<module name="globalload">
+<module name="globops">
+<module name="haproxy">
+<module name="help">
+<module name="helpmode">
+<module name="hidechans">
+<module name="hidelist">
+<module name="hidemode">
+<module name="hideoper">
+<module name="hostcycle">
+#<module name="httpd">
+#<module name="httpd_acl">
+#<module name="httpd_config">
+#<module name="httpd_stats">
+<module name="ident">
+<module name="inviteexception">
+<module name="ircv3">
+<module name="ircv3_accounttag">
+<module name="ircv3_batch">
+<module name="ircv3_capnotify">
+<module name="ircv3_chghost">
+<module name="ircv3_ctctags">
+<module name="ircv3_echomessage">
+<module name="ircv3_invitenotify">
+<module name="ircv3_labeledresponse">
+<module name="ircv3_msgid">
+<module name="ircv3_servertime">
+#<module name="ircv3_sts">
+<module name="joinflood">
+<module name="kicknorejoin">
+<module name="knock">
+#<module name="ldapauth">
+#<module name="ldapoper">
+<module name="log_sql">
+<module name="maphide">
+<module name="md5">
+<module name="messageflood">
+<module name="monitor">
+<module name="multiprefix">
+<module name="muteban">
+<module name="namedmodes">
+<module name="nickflood">
+<module name="nicklock">
+<module name="noctcp">
+<module name="nokicks">
+<module name="nonicks">
+<module name="nonotice">
+<module name="ojoin">
+<module name="operchans">
+<module name="operjoin">
+<module name="operlevels">
+<module name="operlog">
+<module name="opermodes">
+<module name="opermotd">
+<module name="operprefix">
+<module name="opmoderated">
+<module name="override">
+<module name="passforward">
+<module name="password_hash">
+<module name="pbkdf2">
+<module name="permchannels">
+<module name="randquote">
+<module name="realnameban">
+<module name="redirect">
+<module name="regex_glob">
+<module name="regex_stdlib">
+<module name="remove">
+<module name="repeat">
+#<module name="restrictchans">
+#<module name="restrictmsg">
+<module name="rline">
+<module name="rmode">
+<module name="sajoin">
+<module name="sakick">
+<module name="samode">
+<module name="sanick">
+<module name="sapart">
+<module name="saquit">
+#<module name="sasl">
+<module name="satopic">
+<module name="securelist">
+<module name="seenicks">
+<module name="serverban">
+<module name="services">
+<module name="sethost">
+<module name="setident">
+<module name="setidle">
+<module name="setname">
+<module name="sha1">
+<module name="sha2">
+<module name="showfile">
+<module name="showwhois">
+<module name="shun">
+<module name="silence">
+<module name="spanningtree">
+#<module name="sqlauth">
+#<module name="sqloper">
+<module name="sslinfo">
+<module name="sslmodes">
+<module name="starttls">
+<module name="stripcolor">
+<module name="swhois">
+<module name="timedbans">
+<module name="tline">
+<module name="uhnames">
+<module name="uninvite">
+<module name="vhost">
+<module name="watch">
+<module name="websocket">
+<module name="xline_db">
+
+######Extra Modules List
+#<module name="argon2">
+#<module name="geo_maxmind">
+#<module name="ldap">
+#<module name="log_json"> 注意:此模块因为库的使用问题,将不会编译在安装包中
+#<module name="log_syslog">
+#<module name="mysql">
+#<module name="pgsql">
+#<module name="regex_pcre2">
+#<module name="regex_posix">
+#<module name="regex_re2">
+#<module name="sqlite3">
+#<module name="ssl_gnutls">
+#<module name="ssl_openssl">
+#<module name="sslrehashsignal">
+
+
 #-#-#-#-#-#-#-#-#-#Default 模块配置-#-#-#-#-#-#-#-#
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
