--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
@@ -309,7 +309,7 @@
 <ojoin notice="yes"
        op="yes"
        prefix="!OP!">
-<operlog tosnomask="no">
+<operlog tosnomask="yes">
 <override noisy="no"
           requirekey="no"
           timeout="30m">
@@ -369,7 +369,7 @@
 <starttls provider="">
 <timedbans sendnotice="yes">
 <watch maxwatch="32">
-<xlinedb filename="&ConfPath;xline.db"
+<xlinedb filename="&ConfPath;/xline.db"
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
@@ -391,12 +391,15 @@
          hash="bcrypt"
          mask="*">
 
+
 # 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
+# 注意: 对于这些预编译模块中的路径使用 官方建议使用绝对路径 如:&dir.config;/conf/XXX.xxx
 #-#-#-#-#-#-#-#-#-#Extra 模块配置-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:argon2 // geo_maxmind
 <maxmind file="&dir.config;/conf/GeoLite2-Country.mmdb">
 
 #-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
+# sslrehashsignal的脚本存放于: /usr/share/inspircd/deploy-ssl.sh
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
