--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -190,7 +190,7 @@
 <auditorium opcansee="no"
             opvisible="no"
             opercansee="yes">
-<bcrypt rounds="12">
+<bcrypt rounds="15">
 <blockamsg delay="5s"
            action="killopers">
 <botmode forcenotice="no">
@@ -399,6 +399,7 @@
 <maxmind file="&dir.config;/conf/GeoLite2-Country.mmdb">
 
 #-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
+# sslrehashsignal的脚本存放于: /usr/share/inspircd/deploy-ssl.sh
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
