--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -122,13 +122,13 @@
          fixedpart=""
          fixedquit=""
          invitebypassmodes="yes"
-         nosnoticestack="no"
-         maskinlist="yes"
-         maskintopic="yes"
+         nosnoticestack="yes"
+         maskinlist="no"
+         maskintopic="no"
          modesinlist="yes"
          prefixpart="&quot;"
          prefixquit="Quit: "
-         splitwhois="no"
+         splitwhois="splitmsg"
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
@@ -153,7 +153,7 @@
           maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
 # <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
-<exception host="127.0.0.1"
+<exception host="10.0.0.0"
            reason="管理员主机">
 
 
@@ -210,14 +210,14 @@
 <badnick nick="root" reason="为防止攻击保留">
 
 #<badip>标签定义了永久Z线.此标签可以根据需要定义多次.
-<badip ipmask="172.16.0.0" reason="为防止攻击保留">
+<badip ipmask="10.0.0.0" reason="为防止攻击保留">
 
 #<badhost>标签定义了永久K线.此标签可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
 
 #<maxlist>标签的定义数量的清单模式, 可以建立在一个通道
 <maxlist chan="*"
-         limit="100000">
+         limit="10000">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
