--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
@@ -404,21 +404,20 @@
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
             provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem" 
+            certfile="&dir.config;/cert.pem"
+            keyfile="&dir.config;/key.pem" 
             priority="NORMAL">
 <sslprofile name="Websocket"
             provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem"
+            certfile="&dir.config;/cert.pem"
+            keyfile="&dir.config;/key.pem"
             priority="NORMAL"
             requestclientcert="no">
 <sslprofile name="Servers"
             provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem" 
+            certfile="&dir.config;/cert.pem"
+            keyfile="&dir.config;/key.pem" 
             priority="NORMAL">
-
 
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:sqlite3 // mysql // pgsql // ldap
