--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -64,7 +64,7 @@
          hash="bcrypt"
          usecloak="yes"
          useconnectban="yes"
-         modes="+iwx"
+         modes="+iw"
          motd="motd">
 
 <connect name="Basic"
