--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -404,19 +404,19 @@
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
             provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem" 
+            certfile="&dir.config;/cert.pem"
+            keyfile="&dir.config;/key.pem" 
             priority="NORMAL">
 <sslprofile name="Websocket"
             provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem"
+            certfile="&dir.config;/cert.pem"
+            keyfile="&dir.config;/key.pem"
             priority="NORMAL"
             requestclientcert="no">
 <sslprofile name="Servers"
             provider="gnutls"
-            certfile="&dir.config;/conf/ssl/cert.pem"
-            keyfile="&dir.config;/conf/ssl/key.pem" 
+            certfile="&dir.config;/cert.pem"
+            keyfile="&dir.config;/key.pem" 
             priority="NORMAL">
 
 #-#-#-#-#-#-#-#-#-#数据库/认证/LDAP-#-#-#-#-#-#-#-#
