--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
@@ -399,7 +399,7 @@
 <maxmind file="&dir.config;/conf/GeoLite2-Country.mmdb">
 
 #-#-#-#-#-#-#-#-#-#SSL/TLS-#-#-#-#-#-#-#-#
-# sslrehashsignal的脚本存放于: /usr/share/inspircd/deploy-ssl.sh
+# sslrehashsignal的脚本存放于 (请修改后使用): /usr/share/inspircd/deploy-ssl.sh
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl // ssl_gnutls // ircv3_sts // sslrehashsignal
 <gnutls onrehash="yes">
 <sslprofile name="Clients"
