--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -41,6 +41,9 @@
 <bind port="6667,6668,6669"
       type="clients">
 
+<bind port="7000"
+      type="servers">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-#连接设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标签可以根据需要定义多次.
@@ -64,12 +67,12 @@
          hash="bcrypt"
          usecloak="yes"
          useconnectban="yes"
-         modes="+iw"
          motd="motd">
 
 <connect name="Basic"
          parent="Main"
          allow="*"
+         modes="+iw"
          port="6667,6668,6669">
 
 
