--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -378,7 +378,7 @@
          operonly="yes"
          warnexpiring="1w"
          welcomemsg="no">
-<wsorigin allow="https://*.*">
+<wsorigin allow="http://*.*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
