--- a/ARKFUTURE/CONFIG/irssi/irssi.conf
+++ b/ARKFUTURE/CONFIG/irssi/irssi.conf
@@ -94,7 +94,7 @@ chatnets = {
     max_kicks = "4";
     max_msgs = "20";
     max_whois = "30";
-    sasl_mechanism = "";
+    sasl_mechanism = "PLAIN";
     sasl_username = "";
     sasl_password = "";
   };
