--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -16,16 +16,13 @@
 # <type>标签定义了服务器操作员的类型.此标签可以根据需要定义多次.
 <type name="NetAdmin"
        classes="SACommands OperChat BanControl HostCloak Shutdown ServerLink"
-       vhost=""
-       level="90">
+       vhost="">
 <type name="GlobalOp"
        classes="SACommands OperChat BanControl HostCloak ServerLink"
-       vhost=""
-       level="70">
+       vhost="">
 <type name="Helper"
        classes="HostCloak"
-       vhost=""
-       level="50">
+       vhost="">
 
 # <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次. 也可以使用其他方法(数据库/ldap)来使用管理员
 <oper name="arkfuture"
@@ -35,6 +32,8 @@
       host="*@*"
       type="NetAdmin"
       vhost="ARKFUTURE"
+      modes="+sw +*"
       chanmodes="-*+P"
       usermodes="x"
-      snomasks="Aa-Xx">
+      snomasks="Aa-Xx"
+      level="100">
