--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -433,7 +433,7 @@
           introtext="服务器规则:"
           endtext="服务器规则结束.">
 
-<showwhois opersonly="yes">、
+<showwhois opersonly="yes">
 
 <shun affectopers="no"
       allowconnect="yes"
