--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -303,8 +303,8 @@
       privdeafservice="yes">
 
 <disabled fakenonexistent="no"
-          notifyopers="no"
-          commands="MAP"
+          notifyopers="yes"
+          commands=""
           chanmodes=""
           usermodes="">
 
