--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -1,28 +1,48 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#操作员设置#-#-#-#-#-#-#-#-#-#-#-#-#
 # <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
 <class name="Shutdown"
-       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
+       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE"
+       privs="users/auspex channels/auspex servers/auspex users/mass-message users/flood/no-throttle users/flood/increased-buffers"
+       usermodes="*"
+       chanmodes="*"
+       snomasks="*">
 <class name="SACommands" 
        commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
 <class name="ServerLink"
-       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS">
+       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS"
+       privs="servers/auspex"
+       usermodes="*"
+       chanmodes="*"
+       snomasks="Cc">
 <class name="BanControl"
-       commands="KILL GLINE KLINE ZLINE QLINE ELINE TLINE RLINE CHECK NICKLOCK NICKUNLOCK SHUN CBAN">
+       commands="KILL GLINE KLINE ZLINE QLINE ELINE TLINE RLINE CHECK NICKLOCK NICKUNLOCK SHUN CBAN"
+       usermodes="*"
+       chanmodes="*"
+       snomasks="Xx">
 <class name="OperChat"
-       commands="WALLOPS GLOBOPS">
+       commands="WALLOPS GLOBOPS"
+       privs="users/mass-message"
+       usermodes="*"
+       chanmodes="*"
+       snomasks="Gg">
 <class name="HostCloak"
-       commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
+       commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT"
+       privs="users/auspex"
+       usermodes="*" 
+       chanmodes="*">
 
 # <type>标签定义了服务器操作员的类型.此标签可以根据需要定义多次.
 <type name="NetAdmin"
-       classes="SACommands OperChat BanControl HostCloak Shutdown ServerLink"
-       vhost="">
+      classes="SACommands OperChat BanControl HostCloak Shutdown ServerLink"
+      automotd="yes"
+      modes="+s +cCqQ"
+      vhost="">
 <type name="GlobalOp"
-       classes="SACommands OperChat BanControl HostCloak ServerLink"
-       vhost="">
+      classes="SACommands OperChat BanControl HostCloak ServerLink"
+      vhost="">
 <type name="Helper"
-       classes="HostCloak"
-       vhost="">
+      classes="HostCloak"
+      vhost="">
 
 # <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次. 也可以使用其他方法(数据库/ldap)来使用管理员
 <oper name="arkfuture"
