--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -2,7 +2,7 @@
 # <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE"
-       privs="users/auspex channels/auspex servers/auspex users/mass-message users/flood/no-throttle users/flood/increased-buffers"
+       privs="users/auspex channels/auspex servers/auspex users/mass-message users/flood/no-throttle users/flood/increased-buffers users/samode-usermodes"
        usermodes="*"
        chanmodes="*"
        snomasks="*">
