--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -2,12 +2,15 @@
 # <class>标签定义了一组服务器操作员特权.此标签可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE"
-       privs="users/auspex channels/auspex servers/auspex users/mass-message users/flood/no-throttle users/flood/increased-buffers users/samode-usermodes"
+       privs="users/auspex channels/auspex servers/auspex users/mass-message users/flood/no-throttle users/flood/increased-buffers"
        usermodes="*"
        chanmodes="*"
        snomasks="*">
 <class name="SACommands" 
-       commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
+       commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN"
+       privs="users/samode-usermodes"
+       usermodes="*"
+       chanmodes="*">
 <class name="ServerLink"
        commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS"
        privs="servers/auspex"
