--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -82,7 +82,7 @@
          parent="Main"
          allow="*"
          usests="no"
-         modes="+iwx"
+         modes="+iw"
          port="6667,6668,6669">
 
 <connect name="Secure"
