--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modules.conf
@@ -185,30 +185,85 @@
 
 
 #-#-#-#-#-#-#-#-#-#Default 模块配置-#-#-#-#-#-#-#-#
-<anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
+<anticaps message="您的消息超过了 %channel% 的 %percent%%% 大写字符阈值"
+          lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
+
 <auditorium opcansee="no"
             opvisible="no"
             opercansee="yes">
+
 <bcrypt rounds="15">
+
 <blockamsg delay="5s"
            action="killopers">
+
 <botmode forcenotice="no">
+
 <callerid cooldown="10"
           maxaccepts="30"
           tracknick="no">
+
 <chanfilter hidemask="no"
             notifyuser="yes"
             maxlen="50">
-<chanhistory bots="yes"
-             enableumode="yes"
-             maxduration="4w"
-             maxlines="50"
-             prefixmsg="yes">
+
+<chanhistory maxduration="4w"
+             maxlines="100"
+             prefixmsg="yes"
+             savefrombots="yes"
+             sendtobots="yes">
+
 <chanlog channel="#arkfuture_log"
          snomasks="cqjknorvwxCQJKNORVWX">
+
 <channames allowrange=""
            denyrange="">
+
+<cloak method="fingerprint"
+       case="lower"
+       class=""
+       invalidchar="strip"
+       length="32"
+       prefix=""
+       suffix="AFENet"
+       sanitize="yes">
+<cloak method="hmac-sha256"
+       key="5LdTybtvP945DLgyHiMWVxti94hcJO"
+       prefix=""
+       suffix="AFENet"
+       case="lower"
+       hostparts="3"
+       pathparts="1"
+       psl="system"
+       class="">
+<cloak method="static"
+       cloak="tor.example.com"
+       class="">
+
+<codepage name="ascii"
+          charset="ascii">
+
+<autojoin channel=""
+          delay="30s">
+
+<waitpong killonbadreply="yes"
+          sendsnotice="no">
+
+<connectban threshold="10"
+            banmessage="您的IP在短的时间内尝试连接太多次(频率过高).稍等片刻, 您将能够连接."
+            banduration="10m"
+            ipv4cidr="32"
+            ipv6cidr="128"
+            bootwait="2m"
+            splitwait="2m">
+
+<connflood bootwait="2m"
+           maxconns="3"
+           period="30s"
+           timeout="5m"
+           quitmsg="连接受到限制:太多尝试,请5分钟后再试(服务器防止ddos)">
+
 <customprefix name="founder"
               letter="q"
               prefix="~"
@@ -230,94 +285,104 @@
               ranktoset="30000"
               ranktounset="30000"
               depriv="yes">
-<codepage name="ascii"
-          charset="ascii">
-<cloak method="fingerprint"
-       case="lower"
-       class=""
-       invalidchar="strip"
-       length="32"
-       prefix=""
-       suffix="AFENet"
-       sanitize="yes">
-<cloak method="hmac-sha256"
-       key="5LdTybtvP945DLgyHiMWVxti94hcJO"
-       prefix=""
-       suffix="AFENet"
-       case="lower"
-       hostparts="1"
-       pathparts="0"
-       psl="system"
-       class="">
-<autojoin channel=""
-          delay="30s">
-<waitpong killonbadreply="no"
-          sendsnotice="no">
-<connectban threshold="20"
-            banmessage="您的IP范围在太短的时间内尝试连接太多次(频率过高).稍等片刻,您将能够连接."
-            banduration="2h"
-            ipv4cidr="32"
-            ipv6cidr="64"
-            bootwait="5m"
-            splitwait="3m">
-<connflood bootwait="1m"
-           maxconns="3"
-           period="30s"
-           timeout="5m"
-           quitmsg="连接受到限制:太多尝试,请5分钟后再试(防止ddos)">
+<customprefix name="voice"
+              change="yes"
+              depriv="yes">
+
+
 <dccallow action="allow"
           blockchat="yes"
           length="0"
           maxentries="100">
+<banfile action="allow"
+         pattern="*">
+
+
 <deaf bypasschars=""
       servicebypasschars=""
       privdeafservice="yes">
+
 <disabled fakenonexistent="no"
-          notifyopers="no"
+          notifyopers="yes"
           commands=""
           chanmodes=""
           usermodes="">
+
 <filteropts engine=""
             notifyuser="yes"
             warnonselfmsg="no"
-            filename=""
+            filename="&ConfPath;/filters.conf"
             saveperiod="5s"
             backoff="2"
             maxbackoff="5m">
-<hidechans affectsopers="no">
+
+<gateway type="webirc"
+         password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO"
+         hash="bcrypt"
+         mask="*">
+
 <helpmode ignorehideoper="no"
           markhelpers="yes">
+<goodchan name="#help"
+          prefix="o">
+
+<hidechans affectsopers="no"
+           hideservices="yes">
+
 <inviteexception bypasskey="yes">
+
 <ircv3 accountnotify="yes"
        awaynotify="yes"
        extendedjoin="yes"
        standardreplies="yes">
 <ctctags allowclientonlytags="yes">
+<sts host="*"
+     duration="60d"
+     port="6697"
+     preload="yes">
+
 <joinflood bootwait="30s"
            duration="1m"
            splitwait="30s">
+
 <knock notify="notice">
+
 <messageflood extended="yes"
-              message="消息泛滥 (触发了 %lines% 中的消息 %duration%)"
+              message="检测到消息泛洪 (触发了 %lines% 中的 %duration%)"
               notice="1.0"
               privmsg="1.0"
               tagmsg="0.2">
+
 <monitor maxentries="32">
+
 <muteban notifyuser="yes">
+
 <nickflood duration="60s">
-<noctcp enableumode="no">
+
 <ojoin notice="yes"
        op="yes"
        prefix="!OP!">
+
 <operlog tosnomask="yes">
+
+<operprefix prefix="!OP!">
+
 <override noisy="no"
           requirekey="no"
           timeout="30m">
-<operprefix prefix="!OP!">
+
 <passforward cmd="SQUERY %nickrequired% :IDENTIFY %nick% %pass%"
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
-<mkpasswd operonly="no">
+
+<mkpasswd operonly="yes">
+
+<pbkdf2 iterations="12288"
+        length="32">
+<pbkdf2prov hash="sha256"
+            iterations="12288"
+            length="32">
+
 <permchanneldb filename="&ConfPath;/permchannels.conf"
                listmodes="yes"
                operonly="yes"
@@ -325,71 +390,82 @@
                backoff="2"
                maxbackoff="5m"
                writeversion="2">
+
 <randquote file="quotes"
            prefix=""
            suffix="">
+
 <stdregex type="ecmascript">
+
 <remove protectedrank="50000"
         supportnokicks="yes">
+
 <repeat extended="yes"
-        message="重复的洪水 (触发器是 %lines% 中的消息 %duration%)"
+        message="检测到重复泛洪 (触发了 %lines% 中的 %duration%)"
         maxbacklog="20"
         maxdistance="50"
         maxlines="20"
         maxtime="1h"
         size="512">
-<rline engine=""
+
+<rline engine="posix"
        matchonnickchange="no"
        zlineonmatch="no">
+
 <securelist exemptregistered="yes"
             showmsg="yes"
             waittime="60s"
             hidesmallchans="2"
             fakechans="10"
             fakechanprefix="#"
-            fakechantopic="混淆垃圾邮件机器人的虚假渠道 {RANDOM}">
+            fakechantopic="用于迷惑 spambot 的虚假频道 {RANDOM}">
+
 <servicesintegration accountoverrideshold="yes"
                      disablemodes="no">
+
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
+
 <setname notifyopers="yes"
          operonly="no">
+
 <showfile name="RULES"
           file="rules"
           introtext="服务器规则:"
           endtext="服务器规则结束.">
+
 <showwhois opersonly="yes">
+
 <shun affectopers="no"
       allowconnect="yes"
       allowtags="no"
       cleanedcommands="AWAY PART QUIT"
       enabledcommands="ADMIN PING PONG QUIT"
       notifyuser="yes">
+
 <silence exemptservice="yes"
          maxentries="32">
-<starttls provider="">
-<timedbans sendnotice="yes">
-<watch maxwatch="32">
-<xlinedb filename="&ConfPath;/xline.db"
-         saveperiod="5s"
-         backoff="2"
-         maxbackoff="5m">
+
 <sslinfo hash="sha-256"
          localsecure="no"
          operonly="yes"
          warnexpiring="1w"
-         welcomemsg="no">  
-<wsorigin allow="https://*.*">
+         welcomemsg="no">
+
+<starttls provider="">
+
+<timedbans sendnotice="yes">
+
+<watch maxwatch="30">
+
+<wsorigin allow="http://*.*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
-<sts host="*"
-     duration="60d"
-     port="6697"
-     preload="yes">
-<gateway type="webirc"
-         password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO"
-         hash="bcrypt"
-         mask="*">
+
+<xlinedb filename="&ConfPath;/xline.db"
+         saveperiod="5s"
+         backoff="2"
+         maxbackoff="5m">
 
 
 # 注意: 下面配置仅在 INSPIRCD 编译时启用 相关模块 支持时可用
