--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -289,7 +289,6 @@
               change="yes"
               depriv="yes">
 
-
 <dccallow action="allow"
           blockchat="yes"
           length="0"
@@ -310,7 +309,7 @@
             maxbackoff="5m">
 
 <gateway type="webirc"
-         password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO"
+         password="$2a$15$uJ6FPZACRJQr24lRxiWyDe0q/3r7fyMcAd/8/l5BOF5R.NKD9BDAG"
          hash="bcrypt"
          mask="*">
 
@@ -367,6 +366,8 @@
 <passforward cmd="SQUERY %nickrequired% :IDENTIFY %nick% %pass%"
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
+
+<mkpasswd operonly="no">
 
 <pbkdf2 iterations="12288"
         length="32">
