--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -49,8 +49,7 @@
 
 # <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次. 也可以使用其他方法(数据库/ldap)来使用管理员
 <oper name="arkfuture"
-      password="$2a$12$hLhV4qchwBSsfshDkOC95e1QZ22DySloJPfgDmGZBtKDuHlwdFmhO" 
-      nopassword="no"
+      password="请修改此项" 
       hash="bcrypt"
       host="*@*"
       type="NetAdmin"
