--- a/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/opers.conf
@@ -48,8 +48,9 @@
       vhost="">
 
 # <oper>标签定义了一个服务器操作员帐户.此标签可以根据需要定义多次. 也可以使用其他方法(数据库/ldap)来使用管理员
+# password的值应为 [/MKPASSWD bcrypt 您的密码] 得到的加密值
 <oper name="arkfuture"
-      password="请修改此项" 
+      password="$2a$15$KrQEPe7LLC35EcCJ7tDDi.xSABYyrP.PrWhRjhqLfIWa8kBqHpA0a" 
       hash="bcrypt"
       host="*@*"
       type="NetAdmin"
