--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -89,7 +89,7 @@
          parent="Main"
          allow="*"
          port="6697"
-         modes="+iwx"
+         modes="+iw"
          requiressl="yes">
 
 
@@ -105,7 +105,7 @@
 <dns enabled="yes"
      timeout="3s">
 
-# <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
+# <cidr>标签定义了定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
       ipv6clone="128">
 
@@ -153,10 +153,6 @@
           userstats="Pu"
           maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
-# <exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标签可以根据需要定义多次.
-<exception host="10.0.0.1"
-           reason="管理员主机">
-
 
 #-#-#-#-#-#-#-#-#-#-#-#性能设置#-#-#-#-#-#-#-#-#-#-#
 # <performance>标签定义了与服务器性能相关的设置选项.此标签只能定义一次.
@@ -176,7 +172,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#限制设置#-#-#-#-#-#-#-#-#-#-#-#
-# <limits>标签定义用户可设置字段最大长度
+# <limits>标签定义了用户可设置字段最大长度
 <limits maxaway="200"
         maxchan="60"
         maxhost="64"
@@ -208,25 +204,32 @@
         trigger="95.5">
 
 #<badnick>标签定义了永久Q线.此标签可以根据需要定义多次.
-<badnick nick="root" reason="为防止攻击保留">
+<badnick nick="root" 
+         reason="为防止攻击保留">
 
 #<badip>标签定义了永久Z线.此标签可以根据需要定义多次.
-<badip ipmask="10.0.0.0" reason="为防止攻击保留">
+<badip ipmask="10.0.0.1" 
+       reason="为防止攻击保留">
 
 #<badhost>标签定义了永久K线.此标签可以根据需要定义多次.
-<badhost host="*.example.com" reason="为防止攻击保留">
+<badhost host="*.example.com" 
+         reason="为防止攻击保留">
 
-#<maxlist>标签的定义数量的清单模式, 可以建立在一个通道
+# <exception>标签定义了允许特定主机绕过全局限制.此标签可以根据需要定义多次.
+<exception host="10.0.0.1"
+           reason="管理员主机">
+
+#<maxlist>标签定义了可在频道中创建的列表模式的数量, 可以建立在一个通道
 <maxlist chan="*"
          limit="10000">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
-     type="* -USERINPUT -USEROUTPUT"
+     type="*"
      level="normal"
      target="&dir.log;/ircd.log"
-     flush="200">
+     flush="300">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
