--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -396,6 +396,9 @@
        matchonnickchange="no"
        zlineonmatch="no">
 
+<sasl requiressl="yes"
+      target="services.example.com">
+
 <securelist exemptregistered="yes"
             showmsg="yes"
             waittime="60s"
