--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -437,6 +437,7 @@
 
 <watch maxwatch="30">
 
+<wsorigin allow="http://*.*">
 <websocket defaultmode="text" 
            nativeping="yes" 
            proxyranges="*"> 
