--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -144,7 +144,7 @@
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 arkfuture@i2pmail.org 获取详细信息."
-          hideserver="ARKFUTURE"
+          hideserver=""
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
