--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -220,6 +220,14 @@
 <channames allowrange=""
            denyrange="">
 
+<cloak method="fingerprint"
+       case="preserve"
+       class=""
+       invalidchar="strip"
+       length="32"
+       prefix=""
+       suffix="AFENet"
+       sanitize="yes">
 <cloak method="hmac-sha256"
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
        prefix=""
