--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -63,13 +63,13 @@
          password=""
          hash="bcrypt"
          usecloak="yes"
-         useconnectban="yes"
-         motd="motd">
+         useconnectban="yes">
 
 <connect name="Basic"
          parent="Main"
          allow="*"
          modes="+iw"
+         motd="motd"
          port="6667,6668,6669">
 
 
