--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -384,8 +384,8 @@
                writeversion="2">
 
 <randquote file="quotes"
-           prefix=""
-           suffix="">
+           prefix=">>"
+           suffix="<<">
 
 <stdregex type="ecmascript">
 
