--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -290,7 +290,7 @@
               depriv="yes">
 
 <dccallow action="allow"
-          blockchat="yes"
+          blockchat="no"
           length="0"
           maxentries="100">
 <banfile action="allow"
