--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -220,23 +220,13 @@
 <channames allowrange=""
            denyrange="">
 
-<cloak method="fingerprint"
-       case="preserve"
-       class=""
-       invalidchar="strip"
-       length="32"
-       prefix=""
-       suffix="AFENet"
-       sanitize="yes">
 <cloak method="hmac-sha256"
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
        prefix=""
        suffix="AFENet"
        case="lower"
-       hostparts="3"
-       pathparts="1"
        psl="system"
-       class="">
+       class="Basic">
 <cloak method="static"
        cloak="tor.example.com"
        class="">
