--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -224,6 +224,8 @@
        key="5LdTybtvP945DLgyHiMWVxti94hcJO"
        prefix=""
        suffix="AFENet"
+       hostparts="3"
+       pathparts="1"
        case="lower"
        psl="system"
        class="Basic">
