--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -24,7 +24,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器信息#-#-#-#-#-#-#-#-#-#-#-#-#
 # <server>标签定义了本地服务器的设置.此标签只能定义一次.
 <server name="&HostName;"
-        description="ARKFUTURE-NET IRC server"
+        description="ARKFUTURE-NET IRC Server"
         network="ARKFUTURE"
         id="0AF">
 
