--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -1,4 +1,4 @@
-# Anope conf ---UTF-8 ---Security configuration
+# Anope conf ---UTF-8 ---Security configuration ---anope_v2.0
 # 这只是一个基础的设置(模板)文件 我们展示了部分值展示给您 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # 
@@ -35,7 +35,7 @@ uplink
 	ipv6 = no
 	ssl = no
 	port = 7000
-	password = "mypassword"
+	password = "12345678"
 }
 
 
@@ -74,7 +74,7 @@ networkinfo
 	networkname = "ARKFUTURE"
  
 	// 将其设置为您网络允许的最大昵称长度
-	nicklen = 31 
+	nicklen = 30 
  
 	// 将其设置为您网络允许的最大ident长度
 	userlen = 10 
@@ -83,7 +83,7 @@ networkinfo
 	hostlen = 64 
  
 	// 将其设置为您网络允许的最大频道长度
-	chanlen = 32 
+	chanlen = 60 
  
 	// 频道上可设置的列表模式(如b,e,I)的最大数量
 	modelistsize = 100 
@@ -105,45 +105,68 @@ networkinfo
 #-#-#-#-#-#-#-#-#-#-#-#-#服务器选项#-#-#-#-#-#-#-#-#-#-#-#
 options
 {
+    // 在Linux/UNIX系统上,Anope可以在启动后将其setuid和setgid设置为此用户和组 
 	#user = "anope"
 	#group = "anope"
 
+    // 使用的大小写映射这必须设置为安装在您机器上的有效区域设置名称 默认为ascii
 	casemap = "ascii"
 
+    // 此键用于初始化随机数生成器这个数字必须是随机的, 因为您希望您的密码是随机的不要把这个密钥给任何人!保持私密!
+	#seed = 9866235
+
+    // Services将对密码执行更严格的检查如果此 
+	strictpasswords = yes
+
+    // 设置Services在将用户从网络中移除之前允许的无效密码尝试次数
 	badpasslimit = 5
 
+    // 设置无效密码被遗忘的时间如
 	badpasstimeout = 1h
 
-	updatetimeout = 2m
+    // 设置自动数据库更新之间的延迟
+	updatetimeout = 5m
 
+    // 设置检查过期昵称和频道之间的延迟
 	expiretimeout = 30m
 
+    // 设置从上游读取的超时时间
 	readtimeout = 5s
 
+    // 设置通过WALLOPS/GLOBOPS发送程序错误警告消息之间的间隔
+	warningtimeout = 4h
+
+    // 设置超时列表检查的(最大)频率
 	timeoutcheck = 3s
 
-	#servicealias = yes
+    // 如果设置,这将允许用户让Services向他们发送PRIVMSG而不是NOTICE
+	#useprivmsg = yes
 
+    // 如果设置,将强制Services仅对地址为Nick@ServerName的PRIVMSG做出响应
+	#usestrictprivmsg = yes
+
+    // 如果设置,Services将仅向IRC操作员显示/stats o此指令
 	#hidestatso = yes
 
+    // 您网络上U线的服务器列表
 	#ulineservers = "stats.your.network"
 
+    // 在与上游重试连接之间等待多长时间
 	retrywait = 60s
 
+    // 如果设置,Services将从HELP输出中隐藏用户没有特权执行的命令
 	hideprivilegedcommands = yes
 
+    // 如果设置,Services将从HELP输出中隐藏用户因未登录而无法执行的命令
 	hideregisteredcommands = yes
 
-	didyoumeandifference = 4
+    // 使用的正则表达式引擎,由正则表达式模块提供,注释掉以禁用正则匹配
+	#regexengine = "regex/pcre"
 
-	codelength = 15
+    // 启动时加载的语言列表,将在/NICKSERV SET LANGUAGE中可用
+	languages = "ca_ES.UTF-8 de_DE.UTF-8 el_GR.UTF-8 es_ES.UTF-8 fr_FR.UTF-8 hu_HU.UTF-8 it_IT.UTF-8 nl_NL.UTF-8 pl_PL.UTF-8 pt_PT.UTF-8 ru_RU.UTF-8 tr_TR.UTF-8"
 
-	linelength = 100
-
-	#regexengine = "regex/stdlib"
-
-	languages = "de_DE.UTF-8 el_GR.UTF-8 es_ES.UTF-8 fr_FR.UTF-8 it_IT.UTF-8 nl_NL.UTF-8 pl_PL.UTF-8 pt_PT.UTF-8 tr_TR.UTF-8"
-
+    // 非注册和新注册昵称默认接收消息的语言
 	#defaultlanguage = "es_ES.UTF-8"
 }
 
@@ -165,16 +188,6 @@ log
 	other = "*"
 	rawio = no
 	debug = no
-}
-
-log
-{
-	bot = "Global"
-	target = "globops"
-	admin = "global/* operserv/chankill operserv/mode operserv/kick operserv/akill operserv/s*line operserv/noop operserv/jupe operserv/set operserv/svsnick operserv/svsjoin operserv/svspart nickserv/getpass */drop"
-	servers = "squit"
-	users = "oper"
-	other = "expire/* bados akill/*"
 }
 
 
@@ -212,13 +225,13 @@ opertype
 
 #oper 
 {
-	#name = "nick1"
+	#name = "arkfuture"
 	type = "Services Root"
 	require_oper = yes 
 	#password = "secret"
-	#certfp = "ed3383b3f7d74e89433ddaa4a6e5b2d7"
-	#host = "*@*.anope.org  ident@*"
-	#vhost = "oper.mynet" 
+	#certfp = ""
+	#host = "*"
+	#vhost = "" 
 }
 
 #-#-#-#-#-#-#-#-#-#-#-#-#数据库配置-#-#-#-#-#-#-#-#-#-#-#
@@ -241,4 +254,13 @@ module
 {
 	name = "enc_bcrypt"
 	rounds = 15
+}
+
+
+#-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
+# 模块配置文件
+#include
+{
+	type = "file"
+	name = "modules.conf"
 }
