--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -199,9 +199,9 @@
 <exception host="10.0.0.1"
            reason="管理员主机">
 
-#<maxlist>标签定义了数量的清单模式, 可以建立在一个通道
+#<maxlist>标签定义了频道上可设置的列表模式(如b,e,I)的最大数量
 <maxlist chan="*"
-         limit="10000">
+         limit="100">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
