--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -56,15 +56,30 @@ serverinfo
  * 此指令告诉Anope在连接时使用哪个IRCd协议您 *必须* 修改此设置以匹配您运行的IRCd
  *
  * 支持的协议:
+ *  - bahamut
+ *  - charybdis
  *  - hybrid
- *  - inspircd
+ *  - inspircd12
+ *  - inspircd20
+ *  - inspircd3 (for 3.x and 4.x)
  *  - ngircd
  *  - plexus
  *  - ratbox
- *  - solanum
- *  - unrealircd
+ *  - unreal (for 3.2.x)
+ *  - unreal4 (for 4.x or later)
  */
-module { name = "inspircd" }
+module
+{
+	name = "inspircd3"
+
+	// 某些协议模块可在服务器端强制执行模式锁定 这能减少服务程序因锁定模式而反复撤销更改导致的刷屏现象
+	// 若加载的协议模块不支持此功能 本设置将不生效
+	use_server_side_mlock = yes
+
+	// 某些协议模块可在服务器端强制执行模式锁定 这能减少服务程序因锁定模式而反复撤销更改导致的刷屏现象
+	// 若加载的协议模块不支持此功能 本设置将不生效
+	use_server_side_topiclock = yes
+}
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#网络信息#-#-#-#-#-#-#-#-#-#-#-#
@@ -203,7 +218,7 @@ opertype
 	name = "Services Operator"
 	inherits = "Helper, Another Helper"
 	commands = "chanserv/list chanserv/suspend chanserv/topic memoserv/staff nickserv/list nickserv/suspend operserv/mode operserv/chankill operserv/akill operserv/session operserv/modinfo operserv/sqline operserv/oper operserv/kick operserv/ignore operserv/snline"
-	privs = "chanserv/auspex chanserv/no-register-limit memoserv/* nickserv/auspex nickserv/confirm/*"
+	privs = "chanserv/auspex chanserv/no-register-limit memoserv/* nickserv/auspex nickserv/confirm"
 	#modes = "+o"
 }
 
@@ -233,6 +248,94 @@ opertype
 	#host = "*"
 	#vhost = "" 
 }
+
+
+#-#-#-#-#-#-#-#-#-#-#-#-#邮箱配置(可选)-#-#-#-#-#-#-#-#-#-#-#
+mail 
+{
+    // 启用后开放Services的邮件命令功能 若未安装Sendmail兼容的邮件程序可禁用 
+    // 若nickserv:registration设为mail 则本项为必填
+	usemail = yes 
+ 
+    // 邮件发送命令行参数 需包含邮件程序扫描收件人所需参数
+	sendmailpath = "/usr/sbin/msmtp -t"
+ 
+    // 所有邮件的发件地址（需真实存在）
+	sendfrom = "services@example.com" 
+ 
+    // 用户连续发送/接收邮件的最小间隔时间 用于防止邮件轰炸
+	delay = 5m 
+ 
+    // 禁用TO:字段的引号包裹功能 仅在使用ESMTP或QMail时可能需要启用
+	#dontquoteaddresses = yes 
+ 
+    // 邮件内容类型 仅需配置HTML或非UTF-8文本时使用
+	#content_type = "text/plain; charset=UTF-8"
+ 
+	/*
+	 * 用户注册账号时的邮件模板 
+	 * 可用参数：
+	 *  %n - 昵称 
+	 *  %N - 网络名称 
+	 *  %c - 验证码 
+	 */
+	registration_subject = "Nickname registration for %n"
+	registration_message = "Hi,
+ 
+				You have requested to register the nickname %n on %N.
+				Please type \" /msg NickServ CONFIRM %c \" to complete registration.
+ 
+				If you don't know why this mail was sent to you, please ignore it silently.
+ 
+				%N administrators."
+ 
+	/*
+	 * 密码重置邮件模板 
+	 * 可用参数同上 
+	 */
+	reset_subject = "Reset password request for %n"
+	reset_message = "Hi,
+ 
+			You have requested to have the password for %n reset.
+			To reset your password, type \" /msg NickServ CONFIRM %n %c \"
+ 
+			If you don't know why this mail was sent to you, please ignore it silently.
+ 
+			%N administrators."
+ 
+	/*
+	 * 邮箱变更确认邮件模板 
+	 * 新增参数：
+	 *  %e - 旧邮箱 
+	 *  %E - 新邮箱 
+	 */
+	emailchange_subject = "Email confirmation"
+	emailchange_message = "Hi,
+ 
+			You have requested to change your email address from %e to %E.
+			Please type \" /msg NickServ CONFIRM %c \" to confirm this change.
+ 
+			If you don't know why this mail was sent to you, please ignore it silently.
+ 
+			%N administrators."
+ 
+	/*
+	 * 新备忘录通知邮件模板 
+	 * 新增参数：
+	 *  %s - 发送者昵称 
+	 *  %d - 备忘录编号 
+	 *  %t - 备忘录内容 
+	 */
+	memo_subject = "New memo"
+	memo_message = "Hi %n,
+ 
+			You've just received a new memo from %s. This is memo number %d.
+ 
+			Memo text:
+ 
+			%t"
+}
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-#数据库配置-#-#-#-#-#-#-#-#-#-#-#
 
