--- a/ARKFUTURE/CONFIG/inspircd/conf/links.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/links.conf
@@ -1,18 +1,16 @@
 # 服务器连接/irc服务连接
 # 官网例子: https://github.com/inspircd/inspircd/blob/insp4/docs/conf/links.example.conf
-# ARKFUTURE 定义: 一个好的 links.conf 应该有 <connect> <bind> <link> 可选的 <autoconnect>
 
 
 #-#-#-#-#-#-#-#-#-#-#-  服务器链接配置  -#-#-#-#-#-#-#-#-#-#
-<link
-      name="hub.example.org" 
-      ipaddr="penguin.example.org" 
+<bind address="127.0.0.1" port="7000" type="servers">
+<link name="services.arkfuture.test"
+      ipaddr="127.0.0.1"
       port="7000"
       allowmask="*"
       timeout="5m"
-      sslprofile="Servers"
       statshidden="no"
       hidden="no"
-      sendpass="outgoing!password"
-      recvpass="incoming!password">
-
+      sendpass="12345678"
+      recvpass="12345678">
+<uline server="services.arkfuture.test" silent="yes">
