--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -189,7 +189,7 @@ options
 #-#-#-#-#-#-#-#-#-#-#-#-#日志设置#-#-#-#-#-#-#-#-#-#-#-#
 log
 {
-	target = "/var/log/anope/services.log"
+	target = "services.log"
 	#target = "services.log #services"
 	#source = ""
 	bot = "Global"
