--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -367,3 +367,31 @@ module
 	type = "file"
 	name = "modules.conf"
 }
+
+# 管理员服务
+#include
+{
+	type = "file"
+	name = "operserv.conf"
+}
+
+# 备忘录服务
+#include
+{
+	type = "file"
+	name = "memoserv.conf"
+}
+
+# 公共服务
+#include
+{
+	type = "file"
+	name = "global.conf"
+}
+
+# bot服务
+#include
+{
+	type = "file"
+	name = "botserv.conf"
+}
