--- a/ARKFUTURE/CONFIG/anope/operserv.conf
+++ b/ARKFUTURE/CONFIG/anope/operserv.conf
@@ -230,12 +230,12 @@ command { service = "OperServ"; name = "CHANKILL"; command = "operserv/chankill"
 	 * 定义了当 DefCon 恢复到级别 5 时发送的消息此指令是可选的 
 	 * 并且设置后也会覆盖 globalondefcon 和 globalondefconmore
 	 */
-	#offmessage = "服务现已恢复正常 给您带来不便请谅解"
+	offmessage = "服务现已恢复正常 给您带来不便请谅解"
  
 	/*
 	 * 定义了在正常 DefCon 操作有效时 客户端从网络中被 KILL 或 AKILL 的原因
 	 */
-	#akillreason = "此网络目前不接受连接 请稍后再试"
+	akillreason = "此网络目前不接受连接 请稍后再试"
 }
 #command { service = "OperServ"; name = "DEFCON"; command = "operserv/defcon"; permission = "operserv/defcon"; }
 
