--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -251,7 +251,7 @@ opertype
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#邮箱配置(可选)-#-#-#-#-#-#-#-#-#-#-#
-mail 
+#mail 
 {
     # 启用后开放Services的邮件命令功能 若未安装Sendmail兼容的邮件程序可禁用 
     # 若nickserv:registration设为mail 则本项为必填
