--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -361,37 +361,51 @@ module
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
-# 模块配置文件
+# 注册服务
 #include
+{
+	type = "file"
+	name = "nickserv.conf"
+}
+
+# 模块配置文件
+include
 {
 	type = "file"
 	name = "modules.conf"
 }
 
 # 管理员服务
-#include
+include
 {
 	type = "file"
 	name = "operserv.conf"
 }
 
 # 备忘录服务
-#include
+include
 {
 	type = "file"
 	name = "memoserv.conf"
 }
 
 # 公共服务
-#include
+include
 {
 	type = "file"
 	name = "global.conf"
 }
 
 # bot服务
-#include
+include
 {
 	type = "file"
 	name = "botserv.conf"
+}
+
+# 频道服务
+include
+{
+	type = "file"
+	name = "chanserv.conf"
 }
