--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -24,7 +24,7 @@
 #include
 {
 	type = "executable"
-	name = "/usr/bin/wget -q -O - https://some.misconfigured.network.com/anope.conf"
+	name = "curl -L --anyauth https://XX/anope.conf"
 }
 
 
