--- a/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modules.conf
@@ -374,7 +374,7 @@
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
 
-<mkpasswd operonly="no">
+<mkpasswd operonly="no"> #生成第一次密码后请修改此项
 
 <pbkdf2 iterations="12288"
         length="32">
