--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -85,7 +85,7 @@
 <dns enabled="yes"
      timeout="3s">
 
-# <cidr>标签定义定位克隆时应查看的IP地址位数.此标签只能定义一次.
+# <cidr>标签定义了定位克隆时应查看的IP地址位数.此标签只能定义一次.
 <cidr ipv4clone="32"
       ipv6clone="128">
 
@@ -188,7 +188,7 @@
          reason="为防止攻击保留">
 
 #<badip>标签定义了永久Z线.此标签可以根据需要定义多次.
-<badip ipmask="10.0.0.0" 
+<badip ipmask="10.0.0.1" 
        reason="为防止攻击保留">
 
 #<badhost>标签定义了永久K线.此标签可以根据需要定义多次.
@@ -209,7 +209,7 @@
      type="*"
      level="normal"
      target="&dir.log;/ircd.log"
-     flush="200">
+     flush="500">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#其他#-#-#-#-#-#-#-#-#-#-#-#
@@ -244,7 +244,7 @@
          mandatorytag="alias"
          missingokay="no">
 
-# 操作员设置
+# 管理员配置文件
 <include file="&ConfPath;/opers.conf"
          noenv="yes"
          noexec="yes"
