--- a/ARKFUTURE/CONFIG/anope/services.conf
+++ b/ARKFUTURE/CONFIG/anope/services.conf
@@ -219,10 +219,10 @@ opertype
 
 oper 
 {
-	#name = "arkfuture"
+	name = "arkfuture"
 	type = "Services Root"
 	require_oper = yes 
-	#password = "secret"
+	password = "passwd"
 	#certfp = ""
 	#host = "*"
 	#vhost = "" 
